[package]
name = "lightshow"
version = "0.1.0"
authors = ["Neil Gall <neil@gall.scot>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"
rumqtt = "0.31.0"
rustpi_io = "0.1.0"
serde = "^1.0.110"
serde_derive = "^1.0.110"
serde_json = "^1.0.53"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'